Criacao das classes.

--- a/eleicaoiprj/nbproject/private/private.properties
+++ b/eleicaoiprj/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 #Thu May 04 17:15:10 BRT 2017
 javadoc.preview=true
 compile.on.save=true
-user.properties.file=C:\\Users\\vitor.araujo\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Vitor e Debora\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
